Added Ortigueira Station (contributed by Manel Villar) and generated a new release.

--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -38,6 +38,9 @@
     <string name="share_chooser_title">Compartir app OTempo</string>
     <string name="share_subject">OTempo, meteoroloxía galega para Android</string>
     
+    <string-array name="changelog_2_7">
+    	<item>Engadida a estación de Ortigueira. Gracias a Manel Villar pola contribución.</item>
+    </string-array>
     <string-array name="changelog_2_6">
     	<item>Sincronizado co novo formato RSS de Meteogalicia</item>
     </string-array>
