--- a/trunk/res/values-es/strings.xml
+++ b/trunk/res/values-es/strings.xml
@@ -38,6 +38,9 @@
     <string name="share_chooser_title">Compartir app OTempo</string>
     <string name="share_subject">OTempo, meteorología gallega para Android</string>
 
+    <string-array name="changelog_2_7">
+    	<item>Añadida la estación de Ortigueira. Gracias a Manel Villar por la contribución.</item>
+    </string-array>
     <string-array name="changelog_2_6">
     	<item>Sincronizado con el nuevo formato RSS de Meteogalicia</item>
     </string-array>
