--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
     <string name="app_name">OTempo</string>
     <string name="preferencesActivity">Preferences</string>
     <string name="settings">Settings</string>
@@ -38,6 +38,9 @@
     <string name="share_chooser_title">Share OTempo App</string>
     <string name="share_subject">OTempo, galician weather for Android</string>
     
+    <string-array name="changelog_2_7">
+    	<item>Added Ortigueira station. Thanks to Manel Villar for the patch.</item>
+    </string-array>
     <string-array name="changelog_2_6">
     	<item>Synced with the new Meteogalicia RSS format</item>
     </string-array>
