--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -109,7 +109,11 @@
 	<string name="wind_very_strong_southwest">moi forte do suroeste</string>
 	<string name="wind_very_strong_west">moi forte do oeste</string>
 	
-    <string-array name="changelog_3_0">
+    <string-array name="changelog_3_1">
+    	<item>Arranxado un faio na aplicación.</item>
+		<item>Mellorada a distribución en pantalla para que teña o mesmo aspecto en todolos dispositivos. Gracias a Adrian Barbeito polo feedback.</item>
+	</string-array>
+	<string-array name="changelog_3_0">
     	<item>Engadidas de novo as predicións a medio prazo.</item>
     	<item>Engadidos todos os munucipios galegos.</item>
 		<item>As predicións a medio plazo teñen agora descripción cando se preme sobre elas.</item>
