--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -108,7 +108,10 @@
 	<string name="wind_very_strong_southwest">muy fuerte del suroeste</string>
 	<string name="wind_very_strong_west">muy fuerte del oeste</string>
 	
-    <string-array name="changelog_3_1">
+    <string-array name="changelog_3_2">
+        <item>Adaptado a la nueva ubicación de los RSS de Meteogalicia. Gracias a Pilar y Konyn por el feedback.</item>
+    </string-array>
+	<string-array name="changelog_3_1">
     	<item>Arreglado un fallo en la aplicación.</item>
 		<item>Mejorada la distribución en pantalla para que tenga el mismo aspecto en todos los dispositivos. Gracias a Adrian Barbeito por el feedback.</item>
 	</string-array>
