--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -123,6 +123,9 @@
 	<string name="wind_very_strong_southwest">moi forte do suroeste</string>
 	<string name="wind_very_strong_west">moi forte do oeste</string>
 
+	<string-array name="changelog_3_5">
+		<item>Arranxado un faio ó cargar a aplicación. Gracias a Guillermo polo feedback!</item>
+	</string-array>
 	<string-array name="changelog_3_4">
 		<item>Menú na esquina superior esquerda para dispositivos sen botón de menú. Gracias a Juan polo feedback!</item>
 	</string-array>
