--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -122,6 +122,12 @@
 	<string name="wind_very_strong_southwest">muy fuerte del suroeste</string>
 	<string name="wind_very_strong_west">muy fuerte del oeste</string>
 
+	<string-array name="changelog_3_7">
+		<item>Arreglado el modo offline.</item>
+	</string-array>
+	<string-array name="changelog_3_6">
+		<item>Arreglado otro fallo al cargar.</item>
+	</string-array>
 	<string-array name="changelog_3_5">
 		<item>Arreglado un fallo al cargar la aplicación. Gracias Guillermo por el feedback!</item>
 	</string-array>
