--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -123,6 +123,12 @@
 	<string name="wind_very_strong_southwest">moi forte do suroeste</string>
 	<string name="wind_very_strong_west">moi forte do oeste</string>
 
+	<string-array name="changelog_3_7">
+		<item>Arrenxado o modo sen conexión.</item>
+	</string-array>
+	<string-array name="changelog_3_6">
+		<item>Arranxado outro faio ó cargar.</item>
+	</string-array>
 	<string-array name="changelog_3_5">
 		<item>Arranxado un faio ó cargar a aplicación. Gracias a Guillermo polo feedback!</item>
 	</string-array>
