--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -122,6 +122,9 @@
 	<string name="wind_very_strong_southwest">muy fuerte del suroeste</string>
 	<string name="wind_very_strong_west">muy fuerte del oeste</string>
 
+	<string-array name="changelog_3_8">
+		<item>Arreglado un fallo y mejorada la velocidad de carga del widget.</item>
+	</string-array>
 	<string-array name="changelog_3_7">
 		<item>Arreglado el modo offline.</item>
 	</string-array>
