--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -123,6 +123,9 @@
 	<string name="wind_very_strong_southwest">moi forte do suroeste</string>
 	<string name="wind_very_strong_west">moi forte do oeste</string>
 
+	<string-array name="changelog_3_9">
+		<item>Os fondos personalizaos voltan a funcionar.</item>
+	</string-array>
 	<string-array name="changelog_3_8">
 		<item>Arranxado un faio e mellorada a velocidade de carga do widget.</item>
 	</string-array>
