--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -123,6 +123,9 @@
 	<string name="wind_very_strong_southwest">moi forte do suroeste</string>
 	<string name="wind_very_strong_west">moi forte do oeste</string>
 
+	<string-array name="changelog_3_11">
+		<item>Mellora a estabilidade do widget.</item>
+	</string-array>
 	<string-array name="changelog_3_10">
 		<item>Arranxado un faio ó cerrar a aplicación.</item>
 	</string-array>
